Fix image on certain screen sizes and hide overflow in grid.

--- a/website/res/style.css
+++ b/website/res/style.css
@@ -138,6 +138,7 @@ ul.nav li a:hover {
   padding: 20px;
   border-radius: 5px;
   background-color: var(--bg2);
+  overflow: hidden;
 }
 
 .grid-item img {
